[package]
name = "emulator"
version = "0.1.0"
edition = "2021"

[profile.dev.package.backtrace]
opt-level = 3

[dependencies]
bit_field = "0.10.2"
bitfield = "0.15.0"
clap = {version="4.5.7", features = ["derive"]}
color-eyre = "0.6.3"
hashbrown = "0.14.5"
elf = "0.7.4"
instruction_proc = {path = "instruction_proc"}
log = "0.4.22"
