[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

[features]
testing = []
default = []

[dependencies]
bit_field = "0.10.2"
bitfield = "0.15.0"
spin = "0.9.8"

[profile.dev]
panic="abort"
strip = true

[profile.dev.package."*"]
opt-level = "z"

[profile.release]
panic="abort"
# opt-level = "s"
# debug = false
strip = true

[lints.rust]
# We use "testing" instead of "test" because we have a custom test system, check test.py
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(testing)'] }
