[package]
name = "kernel"
version = "0.1.0"
edition = "2021"
exclude = ["/testing", "/testing/**"]

[features]
testing = []
default = []

[dependencies]
bit_field = "0.10.2"
bitfield = "0.16.0"
log = "0.4.22"
spin = "0.9.8"

[profile.dev]
panic="abort"
strip = false
debug = true
split-debuginfo = "unpacked"

# [profile.dev.package."*"]
# opt-level = "z"

[profile.release]
panic="abort"
opt-level = "s"
debug = false
strip = true

[profile.size]
inherits = "release"
opt-level = "s"
strip = true
debug = false
